--- a/inflexible-rigid-apis/pom.xml
+++ b/inflexible-rigid-apis/pom.xml
@@ -5,7 +5,12 @@
     <artifactId>inflexible-rigid-apis</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <dependencies>
-        <dependency>
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-all</artifactId>
+        <version>1.10.19</version>
+    </dependency>
+    <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
