--- a/inflexible-rigid-apis/pom.xml
+++ b/inflexible-rigid-apis/pom.xml
@@ -4,21 +4,9 @@
     <groupId>com.bdorganization</groupId>
     <artifactId>inflexible-rigid-apis</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <dependencies>
-    <dependency>
-        <groupId>org.mockito</groupId>
-        <artifactId>mockito-all</artifactId>
-        <version>1.10.19</version>
-    </dependency>
-    <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-all</artifactId>
-            <version>1.3</version>
-        </dependency>
-    </dependencies>
+    <parent>
+        <groupId>com.bdorganization</groupId>
+        <artifactId>parent-pom</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
 </project>
